add code and molecules pages

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   <div class="main-nav main-nav--fixed">
     <ul>
       <li class="selected"><a href="index.html" class="main-nav-link">Atoms</a></li>
-      <li><a href="index.html" class="main-nav-link">Molecules</a></li>
-      <li><a href="index.html" class="main-nav-link">Pages</a></li>
+      <li><a href="molecules.html" class="main-nav-link">Molecules</a></li>
+      <!-- <li><a href="page-samples.html" class="main-nav-link">Pages</a></li> -->
+      <li><a href="code.html" class="main-nav-link">Code</a></li>
     </ul>
   </div>
   <!-- /Not part of the styleguide -->
@@ -116,6 +117,7 @@
       <hr>
       <h4>Code: A Note About the Page Container</h4>
       <p>The entire page is contained by an element with the <code>.container</code> class added. This element sets the max width of the page based on the container width.</p>
+      <p><strong>NOTE:</strong> It is also important to note the use of the <code>.lastUnit</code> and <code>.lastGroup</code> classes in the grid. These are specifically used in the last elements of groups and classes to handle the padding of the last element.</p>
       <xmp class="code">
   <div class="container">
     <div class="line">
