--- a/molecules.html
+++ b/molecules.html
@@ -2,7 +2,15 @@
 <head>
   <meta charset="UTF-8">
   <title>coLAB Styleguide</title>
-  <link rel="stylesheet" href="dist/css/colab-styleguide.min.css">
+
+  <link rel="stylesheet" href="public/base.css">
+  <link rel="stylesheet" href="public/colors.css">
+  <link rel="stylesheet" href="public/forms.css">
+  <link rel="stylesheet" href="public/grid.css">
+  <link rel="stylesheet" href="public/icons.css">
+  <link rel="stylesheet" href="public/molecules.css">
+  <link rel="stylesheet" href="public/navigation.css">
+  <link rel="stylesheet" href="public/typography.css">
   <link rel="stylesheet" href="public/app-specific.css">
 </head>
 <body>
@@ -16,11 +24,10 @@
       <li><a href="code.html" class="main-nav-link">Code</a></li>
     </ul>
   </div>
+  <!-- /Header -->
 
   <!-- Main content -->
   <div class="container">
-
-
 
     <div class="line">
       <div class="lastUnit size1of1">
@@ -31,10 +38,8 @@
       </div>
     </div>
 
-
-
-
   </div>
+  <!-- /Main content -->
 
 </body>
 </html>
