--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
       <li><a href="code.html" class="main-nav-link">Code</a></li>
     </ul>
   </div>
+
+  <div class="container">
+    <div class="line">
+      <h1 class="u-align--center">Overview</h1>
+      <div class="u-align--center">
+        <a href="#grids" class="strong">Grids</a> |
+        <a href="#typography" class="strong">Typography</a> |
+        <a href="#colors" class="strong">Colors</a> |
+        <a href="#forms" class="strong">Forms</a> |
+        <a href="#images" class="strong">Images</a> |
+        <a href="#icons-logos" class="strong">Icons & Logos</a> |
+        <a href="#site-nav" class="strong">Site Navigation</a> |
+        <a href="#site-footer" class="strong">Site Footer</a>
+      </div>
+    </div>
+    <br>
+    <br>
+    <br>
+  </div>
   <!-- /Not part of the styleguide -->
 
 
@@ -34,7 +53,7 @@
   <!-- GRIDS -->
   <div class="container">
     <div class="line">
-      <h1 class="u-align--center">Grids</h1>
+      <h1 id="grids" class="u-align--center">Grids</h1>
 
       <hr>
       <h4>1 Column</h4>
@@ -189,7 +208,7 @@
   <!-- TYPOGRAPHY -->
   <div class="container">
     <div class="line">
-      <h1 class="u-align--center">Typography</h1>
+      <h1 id="typography" class="u-align--center">Typography</h1>
 
       <hr>
       <div class="line border--bottom">
@@ -312,7 +331,7 @@
   <!-- COLORS -->
   <div class="container">
     <div class="line">
-      <h1 class="u-align--center">Colors</h1>
+      <h1 id="colors" class="u-align--center">Colors</h1>
 
       <hr>
       <h4>Brand Colors</h4>
@@ -379,7 +398,7 @@
   <!-- FORMS -->
   <div class="container">
     <div class="line">
-      <h1 class="u-align--center">Forms</h1>
+      <h1 id="forms" class="u-align--center">Forms</h1>
 
       <hr>
       <h4>Code: Buttons</h4>
@@ -491,7 +510,7 @@
   <!-- IMAGES -->
   <div class="container">
     <div class="line">
-      <h1 class="u-align--center">Images</h1>
+      <h1 id="images" class="u-align--center">Images</h1>
 
       <hr>
       <h4>Code: Avatar Images</h4>
@@ -550,7 +569,7 @@
   <!-- ICONS & LOGO -->
   <div class="container">
     <div class="line">
-      <h1 class="u-align--center">Logos & Icons</h1>
+      <h1 id="icons-logos" class="u-align--center">Icons & Logos</h1>
 
       <hr>
       <h4>Code: Large Logos</h4>
@@ -637,7 +656,7 @@
   <!-- SITE NAVIGATION -->
   <div class="container">
     <div class="line">
-      <h1 class="u-align--center">Site Navigation</h1>
+      <h1 id="site-nav" class="u-align--center">Site Navigation</h1>
 
       <hr>
       <h4>Code: Site Navigation</h4>
@@ -686,7 +705,7 @@
   <!-- SITE FOOTER -->
   <div class="container">
     <div class="line">
-      <h1 class="u-align--center">Site Footer</h1>
+      <h1 id="site-footer" class="u-align--center">Site Footer</h1>
 
       <hr>
       <h4>Code: Site Footer</h4>
